--- a/styles.css
+++ b/styles.css
@@ -52,3 +52,23 @@ li {
 #img {
     border-radius: 100%;
 }
+
+#acercademi {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 600px; 
+    text-align: justify;
+}
+
+.project {
+    margin-bottom: 20px;
+}
+.project img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
+}
+
+.proyectos {
+    margin-left: 15px;
+}
